# 3DEngine

./: .gitignore  CMakeLists.txt  vcpkg.json
inc/: Events.hpp  Shape.hpp  Window.hpp
inc/graphics/: Shader.hpp  Texture.hpp
inc/window/: Camera.hpp  Events.hpp  Window.hpp
res/: main.glslf  main.glslv
src/: Events.cpp  Shape.cpp  Window.cpp  main.cpp
src/graphics/: Shader.cpp  Texture.cpp
src/loaders/: png_load.cpp
src/window/: Camera.cpp  Events.cpp  Window.cpp
